# Clavis

./: .gitignore  BUILD_MACOS.md  Cargo.toml  HANDOFF.md  README.md  README.zh-CN.md  RELEASING.md  build-macos.sh  tauri.conf.json
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: SECURITY_MODEL.md
icons/: icon.icns
packaging/homebrew/: README.md
packaging/homebrew/Casks/: clavis.rb
src/: bib.rs  latex.rs  main.rs  settings.rs  typst_world.rs
src/latex/: compile.rs  diagnostics.rs  distro.rs  engine.rs  mod.rs  project.rs  synctex.rs  types.rs  workdir.rs
tools/: render_icons.py
ui/: app.js  completions.js  editor.js  index.html  styles.css  symbols.js
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
web/src/: App.module.css  App.tsx  main.tsx
web/src/api/: tauri.ts
web/src/compile/: latex.ts  synctex.ts
web/src/completions/: snippets.ts
web/src/components/: BibSection.module.css  BibSection.tsx  CommandPalette.module.css  CommandPalette.tsx  EditorPane.module.css  EditorPane.tsx  ErrorBoundary.tsx  FilesSection.module.css  FilesSection.tsx  FolderTreeSection.module.css  FolderTreeSection.tsx  LogPanel.module.css  LogPanel.tsx  OutlineSection.module.css  OutlineSection.tsx  PdfViewer.module.css  PdfViewer.tsx  PreviewPane.module.css  PreviewPane.tsx  RecentMenu.module.css  RecentMenu.tsx  SettingsDialog.module.css  SettingsDialog.tsx  Sidebar.module.css  Sidebar.tsx  Splitter.module.css  Splitter.tsx  SymbolsPanel.module.css  SymbolsPanel.tsx  Tabs.module.css  Tabs.tsx  Toolbar.module.css  Toolbar.tsx  icons.tsx
web/src/editor/: controller.ts  inputLinks.ts
web/src/files/: files.ts  projectPaths.test.ts  projectPaths.ts  session.ts
web/src/hooks/: useAppTheme.ts  useFileDrop.ts  usePaneLayout.ts  usePdfSearch.ts  useSessionPersistence.ts
web/src/pdf/: pdfjs.ts  textLayer.css
web/src/render/: markdown.ts
web/src/samples/: samples.ts
web/src/store/: commands.ts  compile.ts  index.ts  outline.test.ts  outline.ts  pdf.ts  project.ts  settings.ts  tabs.test.ts  tabs.ts
web/src/styles/: global.css  tokens.css
web/src/symbols/: symbols.ts
web/src/theme/: appTheme.ts
