[workspace]

[package]
name = "clavis"
version = "1.0.1"
description = "A native typesetting key for Markdown, LaTeX & Typst — with live preview"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["dialog-ask", "dialog-confirm", "dialog-message", "dialog-open", "dialog-save", "process-relaunch", "updater", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
typst = "0.11"
typst-syntax = "0.11"
typst-svg = "0.11"
typst-pdf = "0.11"
fontdb = "0.16"
typst-assets = { version = "0.11", features = ["fonts"] }
comemo = "0.4"
chrono = "0.4"
parking_lot = "0.12"
once_cell = "1"
tempfile = "3"
which = "6"
base64 = "0.22"
tokio = { version = "1", features = ["process", "io-util", "rt", "macros", "time", "sync"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }
memmap2 = "0.9.10"
ttf-parser = "0.25.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"       # Optimize for binary size (lowers memory footprint)
lto = true            # Link-time optimization (whole program analysis)
codegen-units = 1     # Maximizes LTO effectiveness
panic = "abort"       # Removes panic unwinding infrastructure
strip = true          # Removes debug symbols
